2022-07-12  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha02: Bali';git push
	git tag -a 5.1.1-alpha02 -m 'fxm';git push --tags

	* Call nco_cdc_lst_bld() only if an invoked filter was not found

	* Add stubs to let NCO examine files with NCZarr file:// schema

	* NCO 5.1.1-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha01: Bali';git push
	git tag -a 5.1.1-alpha01 -m 'Functionally identical to 5.1.0';git push --tags

	* Increase NCO_MIN_CNK_BLOSC from 1U to 4096U to prevent Blosc errors

	* NCO 5.1.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags

	* Change E3SMU_ROOT from 1.6.0 to 1.7.0 in ncremap

	* Warn about Blosc codec in docs

2022-07-11  Charlie Zender  <zender@uci.edu>

	* Tidy nco_fl_mk_lcl() in preparation for Zarr-access work

	* Flesh-out HINT for missing codec WARNING

	* Prevent carrying rcd from cdc_lst_bld into filter loop

2022-07-09  Charlie Zender  <zender@uci.edu>

	* Rewrite nc_inq_var_filter_info() stub for old (pre-4.7.4) netCDF libraries

	* Rewrite nc_inq_var_filter_ids() stub for old (pre-4.7.4) netCDF libraries

	* Simplify nco_cnv_arm_time_install() prototype to exploit new compression API

	* Return from nco_flt_def_wrp() with old (pre-4.7.4) netCDF libraries before encountering new API calls

2022-07-08  Charlie Zender  <zender@uci.edu>

	* Consider variable compressed (and thus requiring chunking) in	nco_cnk_sz_set_trv() whenever _any_ filters have been applied to it

	* Add NC_COMPACT to metadata printing

	* Add NC_EINVAL debugging to nco_def_var_chunking()

	* NCO 5.1.0-beta04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.0-beta04: Steerage';git push
	git tag -a 5.1.0-beta04 -m 'all: documentation, polishing, default levels, dns, blosc';git push --tags
